Fix language label vertical alignment (#11061)

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1228,3 +1228,12 @@ i.icon.centerlock {
     overflow-x: hidden;
     text-overflow: ellipsis;
 }
+
+.language-label {
+    display: inline-flex !important;
+    align-items: center !important;
+}
+
+.language-label .color-icon {
+    position: static !important;
+}
